First functional prototype.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 copy.src.files=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
-index.file=index.php
+index.file=calculator_backbone_app/index.html
 run.as=LOCAL
 url=http://localhost/todos_backbone/
